force-app/main/default/objects/Experian_Logs__c/Experian_Logs__c.object-meta.xml
<CustomObject>
    <label>Experian Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Experian Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>