force-app/main/default/objects/Experian_Logs__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>